--- a/Homescreen/index.html
+++ b/Homescreen/index.html
@@ -15,7 +15,7 @@
         <input type="text" placeholder="Search for a specific dish or dining hall">
       </div>
       <div class="trending">Trending</div>
-      <div class="horizontal-scroll">
+      <div class="horizontal-scroll group1">
         <div class="image-box-container">
           <div class="image-box"></div>
           <div class="item-title">Honey Chicken</div>
