two dining halls

--- a/Homescreen/index.html
+++ b/Homescreen/index.html
@@ -33,46 +33,48 @@
           <div class="item-title">Tacos</div>
         </div>
       </div>
-      <div class="dining-item">
-        <div class="dining-image"></div>
-        <div class="dining-info">
-          <div class="title">Ferris Booth</div>
-          <div class="status">Open until 7:00 pm</div>
+      <div class="dining-grid">
+        <div class="dining-item">
+          <div class="dining-image"></div>
+          <div class="dining-info">
+            <div class="title">Ferris Booth</div>
+            <div class="status">Open until 7:00 pm</div>
+          </div>
         </div>
-      </div>
-      <div class="dining-item">
-        <div class="dining-image"></div>
-        <div class="dining-info">
-          <div class="title">John Jay</div>
-          <div class="status">Open until 7:00 pm</div>
+        <div class="dining-item">
+          <div class="dining-image"></div>
+          <div class="dining-info">
+            <div class="title">John Jay</div>
+            <div class="status">Open until 7:00 pm</div>
+          </div>
         </div>
-      </div>
-      <div class="dining-item">
-        <div class="dining-image"></div>
-        <div class="dining-info">
-          <div class="title">Faculty House</div>
-          <div class="status">Open until 7:00 pm</div>
+        <div class="dining-item">
+          <div class="dining-image"></div>
+          <div class="dining-info">
+            <div class="title">Faculty House</div>
+            <div class="status">Open until 7:00 pm</div>
+          </div>
         </div>
-      </div>
-      <div class="dining-item">
-        <div class="dining-image"></div>
-        <div class="dining-info">
-          <div class="title">Chef Mikes</div>
-          <div class="status" style="color: orange;">Closing soon at 6:00 pm</div>
+        <div class="dining-item">
+          <div class="dining-image"></div>
+          <div class="dining-info">
+            <div class="title">Chef Mikes</div>
+            <div class="status" style="color: orange;">Closing soon at 6:00 pm</div>
+          </div>
         </div>
-      </div>
-      <div class="dining-item">
-        <div class="dining-image"></div>
-        <div class="dining-info">
-          <div class="title">Hewitt</div>
-          <div class="status" style="color: red;">Closed until 10:00 am</div>
+        <div class="dining-item">
+          <div class="dining-image"></div>
+          <div class="dining-info">
+            <div class="title">Hewitt</div>
+            <div class="status" style="color: red;">Closed until 10:00 am</div>
+          </div>
         </div>
-      </div>
-      <div class="dining-item">
-        <div class="dining-image"></div>
-        <div class="dining-info">
-          <div class="title">Grace Dodge</div>
-          <div class="status" style="color: red;">Closed until 10:00 am</div>
+        <div class="dining-item">
+          <div class="dining-image"></div>
+          <div class="dining-info">
+            <div class="title">Grace Dodge</div>
+            <div class="status" style="color: red;">Closed until 10:00 am</div>
+          </div>
         </div>
       </div>
       <div class="footer">
