now dining hall images in there, but nav is gone

--- a/Homescreen/index.html
+++ b/Homescreen/index.html
@@ -35,42 +35,42 @@
       </div>
       <div class="dining-grid">
         <div class="dining-item">
-          <div class="dining-image"></div>
+          <div class="dining-image" style="background-image: url('Dining_Hall_Images/Ferris.png');"></div>
           <div class="dining-info">
             <div class="title">Ferris Booth</div>
             <div class="status">Open until 7:00 pm</div>
           </div>
         </div>
         <div class="dining-item">
-          <div class="dining-image"></div>
+          <div class="dining-image" style="background-image: url('Dining_Hall_Images/JohnJay.png');"></div>
           <div class="dining-info">
             <div class="title">John Jay</div>
             <div class="status">Open until 7:00 pm</div>
           </div>
         </div>
         <div class="dining-item">
-          <div class="dining-image"></div>
+          <div class="dining-image" style="background-image: url('Dining_Hall_Images/FacultyHouse.png');"></div>
           <div class="dining-info">
             <div class="title">Faculty House</div>
             <div class="status">Open until 7:00 pm</div>
           </div>
         </div>
         <div class="dining-item">
-          <div class="dining-image"></div>
+          <div class="dining-image" style="background-image: url('Dining_Hall_Images/ChefMikes.png');"></div>
           <div class="dining-info">
             <div class="title">Chef Mikes</div>
             <div class="status" style="color: orange;">Closing soon at 6:00 pm</div>
           </div>
         </div>
         <div class="dining-item">
-          <div class="dining-image"></div>
+          <div class="dining-image" style="background-image: url('Dining_Hall_Images/Hewit.png');"></div>
           <div class="dining-info">
             <div class="title">Hewitt</div>
             <div class="status" style="color: red;">Closed until 10:00 am</div>
           </div>
         </div>
         <div class="dining-item">
-          <div class="dining-image"></div>
+          <div class="dining-image" style="background-image: url('Dining_Hall_Images/GraceDodge.png');"></div>
           <div class="dining-info">
             <div class="title">Grace Dodge</div>
             <div class="status" style="color: red;">Closed until 10:00 am</div>
