html almost finish for home, scrolls all work, need to work on nav bar and shwoing all info for scroll

--- a/Homescreen/index.html
+++ b/Homescreen/index.html
@@ -17,19 +17,19 @@
       <div class="trending">Trending</div>
       <div class="horizontal-scroll group1">
         <div class="image-box-container">
-          <div class="image-box"></div>
+          <div class="image-box" style="background-image: url('Food_Images/HoneyChicken.jpg');"></div>
           <div class="item-title">Honey Chicken</div>
         </div>
         <div class="image-box-container">
-          <div class="image-box"></div>
+          <div class="image-box" style="background-image: url('Food_Images/Burger.jpg');"></div>
           <div class="item-title">Burger</div>
         </div>
         <div class="image-box-container">
-          <div class="image-box"></div>
+          <div class="image-box" style="background-image: url('Food_Images/Salmon.png');"></div>
           <div class="item-title">Salmon</div>
         </div>
         <div class="image-box-container">
-          <div class="image-box"></div>
+          <div class="image-box" style="background-image: url('Food_Images/Tacos.jpg');"></div>
           <div class="item-title">Tacos</div>
         </div>
       </div>
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="dining-item">
-          <div class="dining-image" style="background-image: url('Dining_Hall_Images/Hewit.png');"></div>
+          <div class="dining-image" style="background-image: url('Dining_Hall_Images/Hewitt.png');"></div>
           <div class="dining-info">
             <div class="title">Hewitt</div>
             <div class="status" style="color: red;">Closed until 10:00 am</div>
@@ -92,7 +92,6 @@
         </div>
       </div>
     </div>
-    <div class="iphone-frame"></div>
   </div>
 </body>
 </html>
