--- a/Homescreen/index1.html
+++ b/Homescreen/index1.html
@@ -83,19 +83,19 @@
 
     <!-- Footer -->
     <footer>
-      <div class="footer-item">
-        <div class="footer-icon"></div>
-        <div>Home</div>
-      </div>
-      <div class="footer-item">
-        <div class="footer-icon"></div>
-        <div>Review</div>
-      </div>
-      <div class="footer-item">
-        <div class="footer-icon"></div>
-        <div>Feed</div>
-      </div>
-    </footer>
+        <div class="footer-item">
+          <img class="footer-icon" src="nav_icons/home.png" alt="Home Icon">
+          <div>Home</div>
+        </div>
+        <div class="footer-item">
+          <img class="footer-icon" src="nav_icons/review.png" alt="Review Icon">
+          <div>Review</div>
+        </div>
+        <div class="footer-item">
+          <img class="footer-icon" src="nav_icons/feed.png" alt="Feed Icon">
+          <div>Feed</div>
+        </div>
+      </footer>
   </div>
 </body>
 </html>
