added horizontal line

--- a/Homescreen/index1.html
+++ b/Homescreen/index1.html
@@ -34,8 +34,8 @@
         </div>
       </div>
     </header>
-
     <!-- Dining Hall Section -->
+    <div class="divider"></div>
     <div class="dining-section">
       <div class="dining-item">
         <img src="Dining_Hall_Images/Ferris.png" alt="Ferris Booth">
