--- a/Homescreen/index1.html
+++ b/Homescreen/index1.html
@@ -10,8 +10,16 @@
   <div class="container">
     <!-- Fixed Header -->
     <header>
-      <div class="logo">CU Eats</div>
+        <header>
+            <div class="logo-container">
+              <img src="Nav_icons/logoimg.png" alt="CU Eats Logo" class="logo-icon" />
+              <span class="logo-text">CU Eats</span>
+            </div>
+          </header>
       <div class="search-bar">
+        <div class="search-icon">
+          <img src="Nav_icons/magnifyingglass.png" alt="Search Icon">
+        </div>
         <input type="text" placeholder="Search for a specific dish or dining hall">
       </div>
       <div class="trending">Trending</div>
