--- a/cueats_feed/index.html
+++ b/cueats_feed/index.html
@@ -16,38 +16,128 @@
         <header class="title">
             <h1>Feed</h1>
         </header>
+        <div class="filters">
+            <a href="#" class="active">All</a>
+            <a href="#">Chef Mike's</a>
+            <a href="#">Hewitt</a>
+            <a href="#">Ferris</a>
+            <a href="#">Grace Dodge</a>
+            <a href="#">John Jay</a>
+        </div>
         <section class="reviews_container">
-            <h2>Latest Reviews</h2>
             <div class="review-item">
-                <div class="heading">
-                    <h3>Meatball Sub Special</h3>
+                <h3>Meatball Sub Special</h3>
+                <div class="ratings-options">
                     <span>
-                        
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                     </span>
                 </div>
                 <div class="content">
-
+                    <img src="/images/meatball_sub.png" alt="Meatball Sub Photo">
+                    <p>Might've looked good at first but turned out to be wet and soggy.</p>
                 </div>
-                <div class="footer">
-
+                <div class="location-time">
+                    <span>Chef Mike's</span>
+                    <span>58 mins ago</span>
+                </div>
+            </div>
+            <div class="review-item">
+                <h3>Fusion Special</h3>
+                <div class="ratings-options">
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-heart"></i>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </span>
+                </div>
+                <div class="content">
+                    <p>YUMMY NEW MEAL AT FERRIS. It didn't look too good at first but this was were sooo juicy and
+                        flavorful.</p>
+                </div>
+                <div class="location-time">
+                    <span>John Jay</span>
+                    <span>1 hr ago</span>
+                </div>
+            </div>
+            <div class="review-item">
+                <h3>Grilled Cheese</h3>
+                <div class="ratings-options">
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </span>
+                </div>
+                <div class="content">
+                    <img src="/images/grilled_cheese_cu.png" alt="Grilled Cheese Photo">
+                    <p>the most elite meal at columbia. i would eat this every day if i could. never once have i been
+                        disappointed by the grilled cheese... <a href="#">Read more</a></p>
+                </div>
+                <div class="location-time">
+                    <span>Ferris Booth Commons</span>
+                    <span>2 hrs ago</span>
+                </div>
+            </div>
+            <div class="review-item">
+                <h3>Lemon Pepper Chicken</h3>
+                <div class="ratings-options">
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                    <span>
+                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
+                    </span>
+                </div>
+                <div class="content">
+                    <p>Is there a professional chef that works in the back? because this fish has been spiced and grilled to PERFECTION.</p>
+                </div>
+                <div class="location-time">
+                    <span>Grace Dodge</span>
+                    <span>7 hrs ago</span>
                 </div>
             </div>
         </section>
-        <div class="navigation">
-            <a href="#">
-                <i class="fa-solid fa-house"></i>
-                <span>Home</span>
-            </a>
-            <a href="#">
-                <i class="fa-solid fa-circle-plus"></i>
-                <span>Review</span>
-            </a>
-            <a href="#">
-                <i class="fa-solid fa-newspaper"></i>
-                <span>Feed</span>
-            </a>
-        </div>
     </section>
+
+    <div class="navigation">
+        <a href="#">
+            <i class="fa-solid fa-house"></i>
+            <span>Home</span>
+        </a>
+        <a href="#">
+            <i class="fa-solid fa-circle-plus"></i>
+            <span>Review</span>
+        </a>
+        <a href="#">
+            <i class="fa-solid fa-newspaper"></i>
+            <span>Feed</span>
+        </a>
+    </div>
 
 </body>
 
