fine tuning food_page

--- a/cueats_food_page/index.html
+++ b/cueats_food_page/index.html
@@ -18,12 +18,15 @@
 
         <!-- Food Image -->
         <div class="food-image-container">
-            <img src="/images/grilled_cheese_cu.png" alt="Grilled Cheese Photo" class="food-image">
+            <img src="grilled_cheese.png" alt="Grilled Cheese Photo" class="food-image">
         </div>
 
         <!-- Food Details -->
         <div class="food-details">
-            <h1 class="food-title">Grilled Cheese</h1>
+            <div class="food-title-container">
+                <div class="food-title">Grilled Cheese</div>
+                <button class="review-button">Review</button>
+            </div>
             <div class="ratings">
                 <span class="stars">
                     <i class="fa-solid fa-star"></i>
@@ -38,7 +41,6 @@
                 <p>Contains <span class="tag">dairy</span>, <span class="tag">wheat</span></p>
                 <p>Reviews mention <span class="tag">long wait</span>, <span class="tag">delicious</span>, <span class="tag">tomato soup</span></p>
             </div>
-            <button class="review-button">Review</button>
         </div>
 
         <!-- Divider -->
