added a more similar working thing

--- a/cueats_food_page/index.html
+++ b/cueats_food_page/index.html
@@ -54,13 +54,22 @@
 
         <!-- Review 1 -->
         <div class="review">
-            <div class="review-text">The grilled cheese at Ferris is pretty solid. Kind of basic but reliable. The line is so long though.</div>
-            <div class="review-footer">
-                <span>2 hrs ago</span>
+            <div class="review-stars-container">
+                <div class="review-stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
                 <div class="ratings-options">
                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                     <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                 </div>
+            </div>
+            <div class="review-text">The grilled cheese at Ferris is pretty solid. Kind of basic but reliable. The line is so long though.</div>
+            <div class="review-footer">
+                <span>2 hrs ago</span>
             </div>
         </div>
 
@@ -68,13 +77,22 @@
 
         <!-- Review 2 -->
         <div class="review">
-            <div class="review-text">The most elite meal at Columbia. I would eat this every day if I could. Never once have I been disappointed by the grilled cheese.</div>
-            <div class="review-footer">
-                <span>6 hrs ago</span>
+            <div class="review-stars-container">
+                <div class="review-stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
                 <div class="ratings-options">
                     <a href="#"><i class="fa-regular fa-heart"></i></a>
                     <a href="#"><i class="fa-solid fa-share-nodes"></i></a>
                 </div>
+            </div>
+            <div class="review-text">The most elite meal at Columbia. I would eat this every day if I could. Never once have I been disappointed by the grilled cheese.</div>
+            <div class="review-footer">
+                <span>6 hrs ago</span>
             </div>
         </div>
 
